# qa_guru_python_15

./: readme.md
with_pipenv/: Pipfile
with_poetry/: pyproject.toml
with_poetry/tests/: test_with_poetry.py
with_requirements/: .gitignore  readme.md
