[tool.poetry]
name = "with_poetry"
version = "0.1.0"
description = ""
authors = ["vasvap <vasvap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0b5"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
allure-pytest = "^2.9.45"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
